# src/config/swagger.yaml
@@ -36,8 +36,8 @@ paths:
                 password:
                   type: string
             example:
-              email: sabavar@redberry.ge
-              password: saba
+              email: example@gmail.com
+              password: 4rf38fj#aws!f$2as
       responses:
         '201':
           description: JWT token generated successfully.
@@ -93,7 +93,7 @@ paths:
         '404':
           description: Company save failed.
 
-  /one-company:
+  /get-one-company:
     post:
       security:
         - bearerAuth: []
@@ -236,7 +236,7 @@ paths:
         '404':
           description: Company not found.
 
-  /one-employee:
+  /get-one-employee:
     post:
       security:
         - bearerAuth: []
@@ -259,30 +259,6 @@ paths:
           description: Employee details successfully fetched.
         '404':
           description: Employee not found.
-
-  /delete-employee:
-    delete:
-      security:
-        - bearerAuth: []
-      tags:
-        - Employee
-      description: Delete one Employee from the database
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: string
-            example:
-              id: 62a5ae7308540d6d70b0820b
-      responses:
-        '200':
-          description: Employee deleted successfully.
-        '404':
-          description: Not found.
 
   /change-employee:
     put:
@@ -326,5 +302,29 @@ paths:
       responses:
         '201':
           description: Employee details changed successfully.
+        '404':
+          description: Not found.
+
+  /delete-employee:
+    delete:
+      security:
+        - bearerAuth: []
+      tags:
+        - Employee
+      description: Delete one Employee from the database
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+            example:
+              id: 62a5ae7308540d6d70b0820b
+      responses:
+        '200':
+          description: Employee deleted successfully.
         '404':
           description: Not found.
